--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"v-viewer": "^3.0.11",
 		"viewerjs": "^1.11.2",
 		"vue": "^3.2.45",
-		"vue-lazyload": "^3.0.0-rc.2",
 		"vue-router": "^4.1.6",
+		"vue3-lazyload": "^0.3.6",
 		"vue3-typed.js": "^1.0.0-pre"
 	},
 	"devDependencies": {
